add vrkais, folder to vrpack endpoints, cli, tests, schemas
